Final modifications on both Phase 2 (placing the rds dataset into the folder data) and Phase 3 (error corrections and modifying some syntaxes)

--- a/Phase 2 - Data description.qmd
+++ b/Phase 2 - Data description.qmd
@@ -469,7 +469,7 @@ The formal construction of our model will be described in the next phase.
 
 ```{r}
 # Saving the final dataset for the next phase
-saveRDS(joined_dataset, file = "joined_dataset.rds")
+saveRDS(joined_dataset, file = "data/joined_dataset.rds")
 ```
 
 
